[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/managers/scene/SceneManager.gd" type="Script" id=1]
[ext_resource path="res://scenes/managers/DialogueManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/UI/menu/Menu.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=5]
resource_name = "BattleFlash"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.5 ),
"transitions": PoolRealArray( 3.86375, 1.1487, 0.0625, 1.8025, 0.757859, 5.85634, 1.27456, 0.0625, 5.85634, 0.0625 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0.94902, 0.94902, 0.94902, 1 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0.94902, 0.94902, 0.94902, 1 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0.94902, 0.94902, 0.94902, 1 ), Color( 0, 0, 0, 0 ), Color( 0.94902, 0.94902, 0.94902, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "FadeToBlack"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeToNormal"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "FadeToWhite"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.870588, 0.870588, 0.870588, 0 ), Color( 0.972549, 0.972549, 0.972549, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "FadeWhiteToNormal"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.972549, 0.972549, 0.972549, 1 ), Color( 0.734375, 0.734375, 0.734375, 0 ) ]
}

[node name="SceneManager" type="Node2D" groups=["to_save"]]
script = ExtResource( 1 )

[node name="CurrentScene" type="Node2D" parent="."]

[node name="Menu" parent="." instance=ExtResource( 3 )]

[node name="DialogueManager" parent="." instance=ExtResource( 2 )]

[node name="ScreenTransition" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="ScreenTransition"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenTransition"]
anims/BattleFlash = SubResource( 5 )
anims/FadeToBlack = SubResource( 1 )
anims/FadeToNormal = SubResource( 2 )
anims/FadeToWhite = SubResource( 3 )
anims/FadeWhiteToNormal = SubResource( 4 )

[node name="GameTimer" type="Timer" parent="."]
wait_time = 60.0

[node name="MenuSounds" type="AudioStreamPlayer" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]

[connection signal="animation_finished" from="ScreenTransition/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
